; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/can/extr_pch_can.c_pch_can_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/can/extr_pch_can.c_pch_can_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pch_can_priv = type { i32 }

@PCH_CAN_STOP = common dso_local global i32 0, align 4
@PCH_CAN_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pch_can_priv*)* @pch_can_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pch_can_release(%struct.pch_can_priv* %0) #0 {
  %2 = alloca %struct.pch_can_priv*, align 8
  store %struct.pch_can_priv* %0, %struct.pch_can_priv** %2, align 8
  %3 = load %struct.pch_can_priv*, %struct.pch_can_priv** %2, align 8
  %4 = load i32, i32* @PCH_CAN_STOP, align 4
  %5 = call i32 @pch_can_set_run_mode(%struct.pch_can_priv* %3, i32 %4)
  %6 = load %struct.pch_can_priv*, %struct.pch_can_priv** %2, align 8
  %7 = load i32, i32* @PCH_CAN_NONE, align 4
  %8 = call i32 @pch_can_set_int_enables(%struct.pch_can_priv* %6, i32 %7)
  %9 = load %struct.pch_can_priv*, %struct.pch_can_priv** %2, align 8
  %10 = call i32 @pch_can_set_rx_all(%struct.pch_can_priv* %9, i32 0)
  %11 = load %struct.pch_can_priv*, %struct.pch_can_priv** %2, align 8
  %12 = call i32 @pch_can_set_tx_all(%struct.pch_can_priv* %11, i32 0)
  ret void
}

declare dso_local i32 @pch_can_set_run_mode(%struct.pch_can_priv*, i32) #1

declare dso_local i32 @pch_can_set_int_enables(%struct.pch_can_priv*, i32) #1

declare dso_local i32 @pch_can_set_rx_all(%struct.pch_can_priv*, i32) #1

declare dso_local i32 @pch_can_set_tx_all(%struct.pch_can_priv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
